<resources>
    <string name="app_name">SvyU</string>
    <string name="ques_1">Which brand of phone will you choose if you are going to buy a new one ?</string>
    <string name="ques_2">How much does your phone cost ?</string>
    <string name="ques_3">What kind of phone are you using ?</string>
    <string name="ques_4">What functions does your phone have now ?</string>
    <string name="ques_5">What functions are the most often used ?</string>
    <string name="ques_6">What function do you expect your phone to have in the future ?</string>
    <string name="ques_7">In which condition will you buy a new phone?</string>
    <string name="ques_8">Which brand of phone will you choose if you are going o buy a new one?</string>
    <string name="ques_9">What characteristic do you think is most important to evaluate a phone?</string>
    <string name="ques_10">How old are you?</string>
    <string name="ques_11">What\'s your gender?</string>
    <string name="ques_12">How much money do you earn per month?</string>
</resources>
