<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGreen">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp"
    android:orientation="vertical"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="Here is your report:"
        android:textColor="@color/colorOrg"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">1
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_1"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_2"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_3"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_4"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_5"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_6"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_7"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_8"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_9"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_10"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_11"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_line"
        android:showDividers="end"
        android:dividerPadding="1.5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/finish"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_12"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
        <TextView
            android:id="@+id/ans_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="no answer"
            android:textColor="@color/colorYellow"
            android:textSize="25sp"
            android:textAlignment="viewEnd"
            android:gravity="end"
            />
    </LinearLayout>
   <TextView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:text="That's it!"
       android:gravity="center_horizontal"
       android:textColor="@color/colorOrg"
       android:textSize="35sp"
       android:layout_marginTop="20dp"/>



</LinearLayout>

</ScrollView>